Scale Launcher icons for extension correctly

Use the same icon size as for other app types
(app_list::AppListConfig::instance().grid_icon_dimension())
to avoid unnecessary repetitive scaling.

Bug: 876113
Test: manual, steps in the bug
Change-Id: Ib5e260263f874f0067c3276293a7c2dc917c775a
Reviewed-on: https://chromium-review.googlesource.com/1182454
Reviewed-by: Ben Wells <benwells@chromium.org>
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585156}
Former-commit-id: f44299c2123609f028752778b6a50f68eb7cc5a4