chrome/browser/extensions/chrome_app_icon_unittest.cc
@@ -6,6 +6,7 @@
 #include <utility>
 #include <vector>
 
+#include "ash/public/cpp/app_list/app_list_config.h"
 #include "base/macros.h"
 #include "base/run_loop.h"
 #include "chrome/browser/extensions/chrome_app_icon.h"
@@ -295,7 +296,7 @@ class ChromeAppIconWithModelTest : public ChromeAppIconTest {
   DISALLOW_COPY_AND_ASSIGN(ChromeAppIconWithModelTest);
 };
 
-// Validates that icons are the same for different consumers.
+// Validates icons sizes for various consumers.
 TEST_F(ChromeAppIconWithModelTest, IconsTheSame) {
   CreateBuilder();
 
@@ -307,7 +308,21 @@ TEST_F(ChromeAppIconWithModelTest, IconsTheSame) {
   std::unique_ptr<gfx::ImageSkia> app_list_item_image =
       app_list_item->icon().DeepCopy();
 
-  // Load reference icon.
+  // Load reference icon sized for the app list.
+  TestAppIcon reference_icon_app_list(
+      profile(), kTestAppId,
+      app_list::AppListConfig::instance().grid_icon_dimension());
+
+  // Wait until reference data is loaded.
+  reference_icon_app_list.image_skia().EnsureRepsForSupportedScales();
+  reference_icon_app_list.WaitForIconUpdates();
+  EXPECT_FALSE(IsBlankImage(reference_icon_app_list.image_skia()));
+
+  // Now compare with app list icon snapshot.
+  EXPECT_TRUE(
+      AreEqual(reference_icon_app_list.image_skia(), *app_list_item_image));
+
+  // Load reference icon sized for the shelf and search results.
   TestAppIcon reference_icon(profile(), kTestAppId,
                              extension_misc::EXTENSION_ICON_MEDIUM);
 
@@ -315,9 +330,6 @@ TEST_F(ChromeAppIconWithModelTest, IconsTheSame) {
   reference_icon.image_skia().EnsureRepsForSupportedScales();
   reference_icon.WaitForIconUpdates();
   EXPECT_FALSE(IsBlankImage(reference_icon.image_skia()));
-
-  // Now compare with app list icon snapshot.
-  EXPECT_TRUE(AreEqual(reference_icon.image_skia(), *app_list_item_image));
 
   app_list::ExtensionAppResult search(profile(), kTestAppId,
                                       app_list_controller(), true);
